too early death

--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -68,7 +68,7 @@
                     <input type="text" class="form-control" id="former_last_name" t="[placeholder]members.former-last-name" value.bind="member.member_info.former_last_name">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="place_of_birth" t="[placeholder]members.death-place" value.bind="member.member_info.PlaceOfBirth">
+                    <input type="text" class="form-control" id="place_of_death" t="[placeholder]members.death-place" value.bind="member.member_info.place_of_death">
                 </div>
                 <div class="form-group" style="margin-top:10px;">
                     <div class="col-md-6" style="padding-left:0;min-width:100%">
