--- a/src/members/members.html
+++ b/src/members/members.html
@@ -62,6 +62,11 @@
                             style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray">
                             ${'members.apply-answers' & t}
                         </button>
+                        <button if.bind="user.privileges.ADMIN && user.editing && theme.is_desktop"
+                            style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray"
+                            class="btn btn-basic btn-lg" click.delegate="check_duplicates()">
+                            ${'members.check-duplicates' & t}
+                        </button>
                         <button if.bind="user.config.enable_articles && theme.is_desktop && articles_exist && ! user.editing" class="btn btn-primary btn-lg" click.delegate="goto_articles()" 
                             style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray;margin-right:150px;">
                             ${'articles.articles' & t}
