Revert "no more # in path"
This reverts commit 4b71e8c4923497359c41b39eafadc5d365b398a5.

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
             <div class="navbar-main" style="position: relative;">
                 <div class="nav-items unselectable" id="nav-items" interact-draggable.bind="theme.interact_setting"
                     interact-dragmove.delegate="drag_menu_items($event)">
-                    <a class="navbar-logo" href="/">
+                    <a class="navbar-logo" href="#">
                         <img if.bind="theme.files.app_logo" src="${theme.files.app_logo}" />
                         <span class="router-title">${router.title & t}</span>
                     </a>
