--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="HWlQ64YZv4Qp97_JanEUUJl58eED5bcUjA3RPSL13Dk" />
     <link rel="stylesheet" href="fontawesome/css/all.css" type="text/css" />
+    <base href="https://lifestone.info/">
+    <!-- <base href="localhost:9000"> -->
 </head>
 
 <body aurelia-app="main">
