--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -108,7 +108,7 @@
                                         </audio>
                                     </div>
                                     <editable
-                                        settings.bind="{show_author:true, show_date:false, class:'story-section', checkable: true, confirmable: params.approval_state.id==2, has_details: used_for==9 }"
+                                        settings.bind="{show_author:user.editing, show_date:false, class:'story-section', checkable: true, confirmable: params.approval_state.id==2, has_details: used_for==9 }"
                                         story.bind="story"
                                         view_details.delegate="view_details(story, $event)"
                                         change.delegate="toggle_story_selection(story, $event, $index)"
