--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             }
         }
     </script>
-    <script src="/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper" ></script>
+    <script src="/scripts/vendor-bundle-65c71fc22a.js" data-main="aurelia-bootstrapper" ></script>
 </body>
 
 </html>
