--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -165,6 +165,7 @@
                             if.bind="!user.advanced_user"
                             params.bind="help_data"></help>
                         <multi-select options.bind="word_index.word_index" selected_options.bind="params.selected_words"
+                            if.bind="user.advanced"
                             keywords.two-way="keywords" place_holder_text="stories.word-index" height="201"
                             highlight_unselectors.bind="highlight_unselectors"
                             ms-change.trigger="handle_words_change($event)" settings.bind="words_settings">
