--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
 <body aurelia-app="main">
     <script>
+        let lst = location.href.split('/');
+        if (location.href.includes('.html')) {
+            let s = lst[0] + '//' + lst[2] + '/' + lst[3] + '/' + lst[5] + '#';
+            for (let i=7; i < lst.length; i++) s += '/' + lst[i];
+            location.href = s;
+        }
+    </script>
+    <!-- <script>
         CheckUrl("scripts/vendor-bundle-[VERSION].js");
         async function CheckUrl(url)
         {
@@ -29,7 +37,7 @@
             }
         }
     </script>
-    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper" ></script>
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper" ></script> -->
 </body>
 
 </html>
