--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body aurelia-app="main">
     <script>
+        // backwared compatibility
         let lst = location.href.split('/');
         if (location.href.includes('.html')) {
             let s = lst[0] + '//' + lst[2] + '/' + lst[3] + '/' + lst[5] + '#';
