--- a/index-public.html
+++ b/index-public.html
@@ -23,6 +23,7 @@
             location.href = s;
         }
     </script>
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper" ></script>
 </body>
 
 </html>
