--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -172,6 +172,13 @@
                         </button>
                     </div>
                     <div style="margin-bottom:5px;">
+                        <button repeat.for="sbt of short_bio_title_options" style="margin-left:8px;width:200px;"
+                            class="btn btn-${sbt==short_bio_title_option ? 'primary' : 'default'} customization"
+                            click.delegate="short_bio_title_option_selected(sbt)">
+                            <span style="font-weight:bolder">${sbt & t}</span>
+                        </button>
+                    </div>
+                    <div style="margin-bottom:5px;">
                         <label style="margin-left:8px;width:200px;">
                             ${'admin.promoted-story-expiration' & t}
                         </label>
