--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -113,6 +113,9 @@
                     <h4 style="margin-top:16px;margin-bottom:0px;color:gray;" if.bind="user.config.short_bio_title">
                         ${'members.life-summary' & t} ${member_info.first_name}
                     </h4>
+                    <h4 style="height: 0;margin-bottom:0px;color:gray;" if.bind="!user.config.short_bio_title">
+                        &nbsp;
+                    </h4>
                     <i class="fa fa-expand fa-lg"
                         show.bind="theme.is_desktop && member.member_stories.length > 1 && !life_summary_expanded"
                         style="margin-left:32px;float:left;cursor:pointer;"
