--- a/src/experiments/experiment.html
+++ b/src/experiments/experiment.html
@@ -33,6 +33,9 @@
     <h3 if.bind="ytKeeper.paused">Paused</h3>
     <h1>State: ${ytKeeper.state}</h1>
     yt-player player.bind="yt_player"></yt-player -->
-    <query></query>
+    <div style="margin-top:50px;margin-right:200px;margin-left:200px;">
+        Testing
+        <query></query>
+    </div>
 
 </template>
