--- a/src/resources/elements/query/query.html
+++ b/src/resources/elements/query/query.html
@@ -1,4 +1,5 @@
-<template>
+<template style="direction:ltr;">
+    <h3>Test user queries</h3>
     <button click.delegate="apply_query()">
         Send
     </button>
