--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -179,10 +179,10 @@
                         </button>
                     </div>
                     <div style="margin-bottom:5px;">
-                        <button repeat.for="oim of objects_in_menu_options" style="margin-left:8px;width:200px;"
-                            class="btn btn-${oim==objects_in_menu_option ? 'primary' : 'default'} customization"
-                            click.delegate="objects_in_menu_option_selected(oim)">
-                            <span style="font-weight:bolder">${sbt & t}</span>
+                        <button repeat.for="aim of articles_in_menu_options" style="margin-left:8px;width:200px;"
+                            class="btn btn-${aim==articles_in_menu_option ? 'primary' : 'default'} customization"
+                            click.delegate="articles_in_menu_option_selected(aim)">
+                            <span style="font-weight:bolder">${aim & t}</span>
                         </button>
                     </div>
                     <div style="margin-bottom:5px;">
