--- a/src/app.html
+++ b/src/app.html
@@ -29,9 +29,11 @@
                 </span>
             </div>
             <div class="navbar-search">
-                <div class="search-box">
+                <div class="search-box" mouseenter.trigger="menu_items_shift(-160)"
+                    mouseleave.trigger="menu_items_shift(0)">
                     <label class="search-box-container">
-                        <input type="text" list="search-history" class="search-box-input" value.bind="keywords"
+                        <input type="text" list="search-history" 
+                            class="search-box-input" value.bind="keywords"
                             t="[placeholder]enter-search-words" keydown.delegate="go_search($event)" />
                             <datalist id="search-history">
                                 <option repeat.for="option of search_history" value.bind="option"></option>
