extend search box only if necessary

--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@
                 </span>
             </div>
             <div class="navbar-search">
-                <div class="search-box" mouseenter.trigger="menu_items_shift(-160)"
+                <div class="search-box" mouseenter.trigger="menu_items_shift(-160)" id="main-search-box"
                     mouseleave.trigger="menu_items_shift(0)">
                     <label class="search-box-container">
                         <input type="text" list="search-history" 
