--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -45,7 +45,7 @@
                     interact-draggable.bind="theme.interact_setting"
                     contextmenu.delegate="handle_context_menu(face, $event)" class="face"
                     id.bind="'face-' + face.member_id" interact-dragmove.delegate="dragmove(face, $event)"
-                    interact-dragstart.delegate="dragstart(face, $event)"
+                    interact-dragstart.delegate="dragstart(face, $event, 'face-')"
                     interact-dragend.delegate="dragend(face, $event)" style.bind="face_location(face)"
                     aubs-tooltip="text.bind:face.name">
                     <span style="position:relative">
@@ -59,7 +59,7 @@
                     interact-draggable.bind="theme.interact_setting"
                     contextmenu.delegate="handle_context_menu(face, $event)" class="face is-article"
                     id.bind="'article-' + face.article_id" interact-dragmove.delegate="dragmove(face, $event)"
-                    interact-dragstart.delegate="dragstart(face, $event)"
+                    interact-dragstart.delegate="dragstart(face, $event, 'article-')"
                     interact-dragend.delegate="dragend(face, $event)" style.bind="face_location(face)"
                     aubs-tooltip="text.bind:face.name">
                     <span style="position:relative">
