show key in multi select

--- a/src/resources/elements/multi-select/edit-topic.html
+++ b/src/resources/elements/multi-select/edit-topic.html
@@ -1,7 +1,7 @@
 <template>
     <ux-dialog css="padding:12px;direction:${theme.rtltr};">
         <ux-dialog-header>
-            <h3>${title}</h3>
+            <h3>${title}  <span if.bind="user.privileges.ADMIN">id: ${topic.id}</span></h3>
         </ux-dialog-header>
         <ux-dialog-body>
             <form class="form-horizontal" role="form">
