--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -13,7 +13,8 @@
             <div show.bind="clear_selections"></div>
             <ul css="padding-right:0;max-height:${settings.height_selected}px;overflow:auto;" ref="scroll_area"
                 class="${theme.rtltr} selected-options">
-                <li repeat.for="item of selected_options" class="${item.group_number % 2 ? 'odd-group' : 'even-group'} ${option_class(item.first, item.last)}">
+                <li repeat.for="item of selected_options"
+                     class="${item.group_number % 2 ? 'odd-group' : 'even-group'} ${option_class(item.first, item.last)}">
                     <div class="option-item"
                         css="margin:0;padding:0;width:${inner_width}px;width:100%;height:24px;display:flex;flex-direction:row-reverse;justify-content:space-between;">
                         <!-- lock/unlock button -->
