--- a/src/resources/elements/timeline.html
+++ b/src/resources/elements/timeline.html
@@ -1,5 +1,5 @@
 <template class="unselectable">
-    <require from="./timeline.css"></require>
+    <import from="./timeline.scss"></import>
     <div css="width: ${timeline_width}px;position:relative;">
         <span style="float:right;position:absolute;top:-30px;font-size:130%;">
             <b>${'timeline' & t}:</b>
