--- a/src/photos/qr-photo.html
+++ b/src/photos/qr-photo.html
@@ -1,36 +1,34 @@
-<template>
-    <require from="./qr-photo.css"></require>
-    <ux-dialog css="padding:12px;direction:${theme.rtltr}">
-        <ux-dialog-header>
-            <h3>${'photos.create-qr-photo' & t}</h3>
-        </ux-dialog-header>
-        <ux-dialog-body css="padding:10px;max-width:300px;direction:${theme.rtltr};">
-            <form class="form-horizontal" role="form" id="new-app">
-                <div class="form-group" style="margin-left:0;margin-right:0;">
-                    <input type="number" class="form-control" id="inputFirstName3"
-                        t="[placeholder]photos.printed-photo-width" change.delegate="changed('width')"
-                        value.bind="data.width">
+<import from="./qr-photo.scss"></import>
+<ux-dialog css="padding:12px;direction:${theme.rtltr}">
+    <ux-dialog-header>
+        <h3>${'photos.create-qr-photo' & t}</h3>
+    </ux-dialog-header>
+    <ux-dialog-body css="padding:10px;max-width:300px;direction:${theme.rtltr};">
+        <form class="form-horizontal" role="form" id="new-app">
+            <div class="form-group" style="margin-left:0;margin-right:0;">
+                <input type="number" class="form-control" id="inputFirstName3"
+                    t="[placeholder]photos.printed-photo-width" change.delegate="changed('width')"
+                    value.bind="data.width">
+            </div>
+            <div class="form-group" style="margin-left:0;margin-right:0;">
+                <input type="number" class="form-control" id="inputFirstName3"
+                    t="[placeholder]photos.printed-photo-height" change.delegate="changed('height')"
+                    value.bind="data.height">
+            </div>
+            <div class="form-group" style="margin-left:0;margin-right:0;">
+                <div class="qpos-list">
+                    <button repeat.for="qp of qpositions" type="button" click.delegate="set_qposition(qp)"
+                        class="qpos ${data.position == qp ? 'active' : ''}">
+                        <i class="fa fa-xs fa-square ${qp}"></i>
+                    </button>
                 </div>
-                <div class="form-group" style="margin-left:0;margin-right:0;">
-                    <input type="number" class="form-control" id="inputFirstName3"
-                        t="[placeholder]photos.printed-photo-height" change.delegate="changed('height')"
-                        value.bind="data.height">
-                </div>
-                <div class="form-group" style="margin-left:0;margin-right:0;">
-                    <div class="qpos-list">
-                        <button repeat.for="qp of qpositions" type="button" click.delegate="set_qposition(qp)"
-                            class="qpos ${data.position == qp ? 'active' : ''}">
-                            <i class="fa fa-xs fa-square ${qp}"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </ux-dialog-body>
-        <ux-dialog-footer>
-            <button type="button" class="btn btn-primary ${disabled_if}" click.delegate="save()">${'photos.save' &
-                t}</button>
-            <button type="button" if.bind="!done" class="btn btn-info" click.delegate="cancel()">${'photos.cancel' &
-                t}</button>
-        </ux-dialog-footer>
-    </ux-dialog>
-</template>
+            </div>
+        </form>
+    </ux-dialog-body>
+    <ux-dialog-footer>
+        <button type="button" class="btn btn-primary ${disabled_if}" click.delegate="save()">${'photos.save' &
+            t}</button>
+        <button type="button" if.bind="!done" class="btn btn-info" click.delegate="cancel()">${'photos.cancel' &
+            t}</button>
+    </ux-dialog-footer>
+</ux-dialog>
