--- a/src/resources/elements/search-input.html
+++ b/src/resources/elements/search-input.html
@@ -1,12 +1,10 @@
-<template>
-    <require from="./search-input.css"></require>
-    <div class="search-input input-group">
-        <div class="spyglass-div">
-            <!--i class="fa fa-search search"></i-->
-            <help topic.bind="help_topic" class="search" position="bottom" style="padding-right:2px;"></help>
-        </div>
-        <input type="search" value.bind="value" t="[placeholder]${placeholder}"
-            keydown.delegate="input_changed($event) & debounce: 3000">
-        <i class="far fa-times fa-sm remove" if.bind="value" click.trigger="clear_text()" css="top:${(height-14)/2}px;"></i>
+<import from="./search-input.scss"></import>
+<div class="search-input input-group">
+    <div class="spyglass-div">
+        <!--i class="fa fa-search search"></i-->
+        <help topic.bind="help_topic" class="search" position="bottom" style="padding-right:2px;"></help>
     </div>
-</template>
+    <input type="search" value.bind="value" t="[placeholder]${placeholder}"
+        keydown.delegate="input_changed($event) & debounce: 3000">
+    <i class="far fa-times fa-sm remove" if.bind="value" click.trigger="clear_text()" css="top:${(height-14)/2}px;"></i>
+</div>
