--- a/src/user/feedback.html
+++ b/src/user/feedback.html
@@ -1,4 +1,4 @@
-<import from="./promote.css"></import>
+<import from="./promote.scss"></import>
 
 <ux-dialog css="direction:${theme.rtltr};width:43em;">
     <ux-dialog-header style="padding-right:32px;">
