--- a/src/resources/elements/db-form/field-control.html
+++ b/src/resources/elements/db-form/field-control.html
@@ -1,3 +1,10 @@
 <template>
-    
+    <div style="margin-bottom:5px;" if.bind="ui_kind=='bool-opt">
+        <button repeat.for="opt of options" style="margin-left:8px;width:200px;"
+            class="btn btn-${bool_val ? 'primary' : 'default'} customization"
+            click.delegate="selected(opt)">
+            <span style="font-weight:bolder">${opt.name & t}</span>
+        </button>
+    </div>
+
 </template>
