--- a/src/experiments/experiment.html
+++ b/src/experiments/experiment.html
@@ -3,7 +3,15 @@
         bool val: ${bool_val}
         <field-control name="boom" type="boolean" bool_val.bind="bool_val" description="True or false" 
             options.bind="options"
-            change.delegate="handle_data_change($event)">
+            data_change.delegate="handle_data_change($event)">
+            field control here
+        </field-control>
+    </div>
+    <div style="margin-top:50px;margin-right:200px;margin-left:200px;">
+        int_val: ${int_val}
+        <field-control name="koom" type="integer" int_val.bind="int_val" description="select color" 
+            options.bind="int_options"
+            data_change.delegate="handle_data_change($event)">
             field control here
         </field-control>
     </div>
