--- a/src/members/members.html
+++ b/src/members/members.html
@@ -59,7 +59,8 @@
                             q-change.delegate="questions_changed($event)">
                         </quiz>
                         <button class="btn btn-default" if.bind="user.debugging || user.privileges.DEVELOPER"
-                            style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray;margin-left:4px;"                            click.delegate="open_query_editor()">
+                            style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray;margin-left:4px;"                            
+                            click.delegate="open_query_editor()">
                             Select members by query
                         </button>
                         <button if.bind="changes_pending" class="btn btn-primary btn-lg" click.delegate="apply_changes()" 
