--- a/src/resources/elements/chats/chatroom-group.html
+++ b/src/resources/elements/chats/chatroom-group.html
@@ -31,7 +31,7 @@
                 <div style="margin:5px;" show.bind="new_chatroom_name_visible">
                     <input
                         style="font-size: 95%;margin-bottom:3px;margin-left:16px;float:left;width: 240px;height:28px;"
-                        dir="rtl" type="text" value.bind="new_chatroom_name" placeholder="enter chatroom name"
+                        dir="rtl" type="text" value.bind="new_chatroom_name" placeholder="${'enter-chatroom-name' & t}"
                         class="form-control input-small" />
                 </div>
             </form>
